# Rusty-Push-Notifier

./: .env.dist  .gitignore  Cargo.toml  README.md  docker-compose.yml
BrunoExample/: Fetch Users paginated.bru  Health-Check.bru  Send Simple User Notification.bru  Send User Notification With Extra Data Templated.bru  Send Users notifications.bru  Update User Token.bru
app/api/: Cargo.toml
app/api/src/: lib.rs
app/api/src/controllers/: health_check.rs  users.rs
app/api/src/dto/: mod.rs  pagination_dto.rs  user_dto.rs
app/api/src/swagger/: api_doc.rs
app/core/: Cargo.toml
app/core/src/: config.rs  error.rs  http_helper.rs  lib.rs  responses.rs  user_context.rs
app/migration/: Cargo.toml
app/migration/src/: lib.rs  migration.rs
app/migration/src/migrations/: migration_base00000.rs  migration_init000000.rs  mod.rs
app/service/: Cargo.toml
app/service/src/: lib.rs  notification_history_service.rs  notification_service.rs  redis_service.rs  user_service.rs
app/service/src/rows/: mod.rs  notification_row.rs  user_from_row.rs
app/types/: Cargo.toml
app/types/src/: dates.rs  device_id.rs  enums.rs  identifier.rs  prelude.rs  string.rs  user.rs
command/: Cargo.toml
command/src/: main.rs
resources/: notifications.yml
src/: main.rs
