[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
core = { path = "../core" }
serde = "1.0.205"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "macros", "mysql", "time", "chrono"] }
redis = "0.26.1"
chrono = "0.4.38"
serde_json = "1.0.124"
fcm = { git = "https://github.com/rj76/fcm-rust.git" }
serde_yaml = "0.9.34"
